# temporal-morphing-ncomms

./: .gitignore  README.md  README.txt
extra/: README.txt  holder.scad  plot_stress_relax.m  rubber_stress_relaxation.csv
extra/fabrication/: gen_stretch_markers.py  push_pin.scad
extra/shell_mechanical_tests/: plot_mech.m
extra/shell_mechanical_tests/experiments/: reg_bend_20191029.xls  reg_compress_20191029.xls  reg_shear_20191029.xls  reg_stretch_20191029.xls
extra/shell_scan/: README.txt  fdist.m  img_cloud.m  img_mask.m  img_proc.m  reg_markers.m  scan_preprocess.m  scan_register.m  scan_register_weave.m  smp_scan.m
extra/shell_scan/data/: saddle_markers.txt  scale_markers.txt  spiral_markers.txt  weave_markers.txt
extra/unit_cell_generator/: adapter.scad  boot.scad  bracket.scad  container.scad  inputs.scad  params.scad  specimen.py
extra/unit_cell_modeling/: README.txt  all_run.m  color_setup.m  dry_fit.m  dry_preprocess.m  genpoly.m  import_data.m  make_grid.m  plastic_preprocess.m  plot_dry.m  plot_speed.m  plot_thick_rates.m  plot_wet.m  plot_wet_slice.m  plotf_size.m  polyco.m  strain_sample.m  stress_refit.m  wet_fit.m  wet_preprocess.m
extra/unit_cell_modeling/experiments/: dry_20181102.xls  dry_fit.mat  wet_1N_20181119.xls  wet_2N_20181119.xls  wet_3N_20181119.xls  wet_4and5N_20181119.xls  wet_fit.mat  wet_speed_20181102.xls
shells/: README.txt
smpsym/: CMakeLists.txt  CMakeLocal-template.txt  CMakeLocal.txt  README.txt  bracket_configurer.cpp  bracket_configurer.h  bracket_model.cpp  bracket_model.h  cmap_GnBu.json  eigen_dense_base_addons.h  interface.h  smp_addons.h  smp_mesh.cpp  smp_mesh.h  smp_physim.cpp  smp_physim.h  smp_simulator.cpp  smp_simulator.h  smpup.cpp  smpup.h  specimen.cpp  specimen.h
smpsym/assets/: core_settings.json  phong.frag  select.frag  select.vert  wireframe.frag
smpsym/mitsuba/: template.xml
smpsym/model/: bracket_model.json  linear_membrane_model.json  smp_options.json
smpsym/smpapp/: smp_imgui.cpp  smp_imgui.h  smp_imgui_handler.cpp  smp_imgui_handler.h  smp_imgui_main_menu.cpp  smp_imgui_popups.cpp  smp_imgui_windows.cpp  smp_remesh_handler.cpp  smp_remesh_handler.h  smp_simulation_handler.cpp  smp_simulation_handler.h  smpapp.cpp  smpapp.h  smpapp_visual.cpp  smpapp_visual.h  smpup_visual.cpp  smpup_visual.h
smpsym/utils/: self_serializer.h  single_task_thread.h  smp_geogram.cpp  smp_geogram.h  smp_matlab.cpp  smp_matlab.h  umath.cpp  umath.h  utils.cpp  utils.h
